bitfield/tests/09-variant-out-of-range.stderr
error[E0080]: evaluation of constant value failed
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ attempt to compute `0_u32 - 1_u32`, which would overflow
  |
  = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
